--- a/frontend-webapp/src/app/shared/market/market.component.scss
+++ b/frontend-webapp/src/app/shared/market/market.component.scss
@@ -6,6 +6,8 @@ a.market {
   margin: -0.75rem;
   padding: 0.75rem;
   transition: box-shadow 0.25s;
+  border-radius: $border-radius;
+
   &:hover {
     box-shadow: 0 0.3rem 0.6rem rgba(0, 0, 0, 0.2);
     background: $white;
@@ -17,7 +19,7 @@ a.market {
     background-size: cover;
     background-position: center;
     margin-bottom: map-get($spacers, 3);
-    border-radius: $border-radius-sm;
+    border-radius: $border-radius;
     position: relative;
     .expire-note {
       @include font-family(heading);
