Add some template

--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -1,12 +1,30 @@
-<div *appSubNavBar class="vendor-bar d-flex">
-  <div class="vendor-item pt-3 py-2 px-1 mr-4">จัดการตลาด</div>
-  <div class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลการเงิน</div>
-  <div class="vendor-item active pt-3 py-2 px-1 mr-4">ข้อมูลส่วนตัว</div>
-</div>
-
-<div class="container">
-  <div class="mt-5 mb-3">
+<div class="col-md-10">
+  <div class="d-flex">
     <h1>ข้อมูลส่วนตัว</h1>
-    <div>ข้อมูลของนายน้องหนึ่ง น้องสอง</div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-md-6">
+      <img class="profile-img img-fluid rounded mx-auto d-block" src="http://via.placeholder.com/600x800">
+    </div>
+    <div class="col-md-6">
+      <div class="mb-2">
+        <div class="title">อีเมล์</div>
+        <div>ข้อมูลของนายน้องหนึ่ง อิอิ</div>
+      </div>
+      <div class="mb-2">
+        <div class="title">ชื่อ</div>
+        <div>ข้อมูลของนายน้องหนึ่ง อิอิ</div>
+      </div>
+      <div class="mb-2">
+        <div class="title">นามสกุล</div>
+        <div>ข้อมูลของนายน้องหนึ่ง อิอิ</div>
+      </div>
+      <div class="mb-2">
+        <div class="title">เบอร์โทรศัพท์</div>
+        <div>ข้อมูลของนายน้องหนึ่ง อิอิ</div>
+      </div>
+      <button class="btn btn-outline-danger">แก้ไขข้อมูล</button>
+      <button class="btn btn-primary">บันทึกข้อมูล</button>
+    </div>
   </div>
 </div>
