Use expireDays data from server

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -50,7 +50,7 @@
             </div>
             <div class="card-footer">
               <app-svg-icon key="person-circle"></app-svg-icon>
-            <span>มีคนจองตลาดนี้แล้ว 84 คน</span>
+            <span>มีคนจองตลาดนี้แล้ว {{ market?.reservedNo }} คน</span>
             </div>
           </div>
         </div>
