--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
@@ -2,6 +2,7 @@
 
 .title {
   font-size: 1.3rem;
+  margin-bottom: map-get($spacers, 0.5);
   @include font-family(heading);
   @include font-weight(regular);
 }
