Change nav-bar's box-shadow to border-bottom

--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@
 :host {
   background: $white;
   z-index: $zindex-fixed;
-  box-shadow: 0 0 1rem transparentize($black, 0.85);
+  border-bottom: 1px solid $light-gray;
 }
 
 .navbar {
