Add shadow to search input in feed page

--- a/frontend-webapp/src/app/feed/feed.component.scss
+++ b/frontend-webapp/src/app/feed/feed.component.scss
@@ -24,6 +24,9 @@
     font-size: 1.8rem;
     margin-bottom: 3rem;
   }
+  input {
+    box-shadow: 0 4px 8px rgba($gray, 0.15);
+  }
 }
 
 .emphasized-market-item {
