Add margin between pagination's buttons

--- a/frontend-webapp/src/app/shared/pagination/pagination.component.scss
+++ b/frontend-webapp/src/app/shared/pagination/pagination.component.scss
@@ -11,6 +11,10 @@
   .btn {
     cursor: pointer;
     width: 2.2rem;
+    margin-left: 0.5rem;
+    &:first-child {
+      margin-left: 0;
+    }
     &:hover {
       background: $light-gray;
     }
