--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -2,72 +2,78 @@
   <div class="d-flex">
     <h1>ข้อมูลส่วนตัว</h1>
   </div>
-  <div class="row mt-4">
-    <div class="col-md-6">
-      <div>
-        <img class="profile-img img-fluid rounded d-block" [src]="vendorProfile.profile_image || '/media/profile_images/2017/11/13/kitten-3.jpg'">
-      </div>
-      <div *ngIf="isEdit" class="mt-3">
-        <button class="btn btn-outline-primary mx-auto d-block">แก้ไขรูป</button>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div *ngIf="!isEdit">
-        <div class="mb-2">
-          <div class="title">อีเมล์</div>
-          <div>{{ vendorProfile.email }}</div>
-        </div>
-        <div class="mb-2">
-          <div class="title">ชื่อ</div>
-          <div>{{ vendorProfile.firstName }}</div>
-        </div>
-        <div class="mb-2">
-          <div class="title">นามสกุล</div>
-          <div>{{ vendorProfile.lastName }}</div>
-        </div>
-        <div class="mb-2">
-          <div class="title">เบอร์โทรศัพท์</div>
-          <div>{{ vendorProfile.phone }}</div>
-        </div>
-        <button class="btn btn-outline-danger" (click)="setEditProfile(true)">แก้ไขข้อมูล</button>
-      </div>
-      <form *ngIf="isEdit" [formGroup]="vendorProfileForm" (submit)="updateProfile()">
+  <form [formGroup]="vendorProfileForm" (submit)="updateProfile()">
+    <div class="row mt-4">
+      <div class="col-md-6">
         <div>
+          <img class="profile-img img-fluid rounded d-block" [src]="vendorProfile.profileImage || '/media/profile_images/2017/11/13/kitten-3.jpg'">
+        </div>
+        <div *ngIf="isEdit" class="mt-3">
+          <app-file-input></app-file-input>
+          <button class="btn btn-outline-primary mx-auto d-block">แก้ไขรูป</button>
+        </div>  
+      </div>
+      <div class="col-md-6">
+        <div *ngIf="!isEdit">
           <div class="mb-2">
             <div class="title">อีเมล์</div>
-            <input type="text" class="form-control" [value]="vendorProfile.email" disabled="disabled">
+            <div>{{ vendorProfile.email }}</div>
           </div>
-
-          <app-input-group label="ชื่อ">
-            <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อ" value="1234">
-            <app-input-error *ngIf="vendorProfileForm.controls['firstName'].hasError('required')">
-              กรุณากรอกชื่อผู้ให้เช่า
-            </app-input-error>
-          </app-input-group>
-
-          <app-input-group label="นามสกุล">
-            <input appInput type="text" class="form-control" formControlName="lastName" placeholder="นามสกุล">
-            <app-input-error *ngIf="vendorProfileForm.controls['lastName'].hasError('required')">
-              กรุณากรอกนามสกุล
-            </app-input-error>
-          </app-input-group>
-
-          <app-input-group label="เบอร์โทรศัพท์">
-            <input appInput type="text" class="form-control" formControlName="phone" placeholder="081234567">
-            <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('required')">
-              กรุณากรอกเบอร์โทรศัพท์
-            </app-input-error>
-            <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('pattern')">
-              เบอร์โทรศัพท์ต้องอยู่ในรูป 0812345678
-            </app-input-error>
-          </app-input-group>
-
-          <button class="btn btn-primary" class="btn btn-outline-danger mr-2" (click)="setEditProfile(false)">ยกเลิก</button>
-          <button type="submit" class="btn btn-primary" [disabled]="vendorProfileForm.disabled" class="btn btn-primary">
-            บันทึกข้อมูล
-          </button>
+          <div class="mb-2">
+            <div class="title">ชื่อ</div>
+            <div>{{ vendorProfile.firstName }}</div>
+          </div>
+          <div class="mb-2">
+            <div class="title">นามสกุล</div>
+            <div>{{ vendorProfile.lastName }}</div>
+          </div>
+          <div class="mb-2">
+            <div class="title">เบอร์โทรศัพท์</div>
+            <div>{{ vendorProfile.phone }}</div>
+          </div>
+          <div class="mt-3"></div>
+          <button class="btn btn-outline-danger" (click)="setEditProfile(true)">แก้ไขข้อมูล</button>
         </div>
-      </form>
+        <div *ngIf="isEdit">
+          <div>
+            <div class="mb-2">
+              <div class="title">อีเมล์</div>
+              <input type="text" class="form-control" [value]="vendorProfile.email" disabled="disabled">
+            </div>
+
+            <app-input-group label="ชื่อ">
+              <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อ" value="1234">
+              <app-input-error *ngIf="vendorProfileForm.controls['firstName'].hasError('required')">
+                กรุณากรอกชื่อผู้ให้เช่า
+              </app-input-error>
+            </app-input-group>
+
+            <app-input-group label="นามสกุล">
+              <input appInput type="text" class="form-control" formControlName="lastName" placeholder="นามสกุล">
+              <app-input-error *ngIf="vendorProfileForm.controls['lastName'].hasError('required')">
+                กรุณากรอกนามสกุล
+              </app-input-error>
+            </app-input-group>
+
+            <app-input-group label="เบอร์โทรศัพท์">
+              <input appInput type="text" class="form-control" formControlName="phone" placeholder="081234567">
+              <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('required')">
+                กรุณากรอกเบอร์โทรศัพท์
+              </app-input-error>
+              <app-input-error *ngIf="vendorProfileForm.controls['phone'].hasError('pattern')">
+                เบอร์โทรศัพท์ต้องอยู่ในรูป 0812345678
+              </app-input-error>
+            </app-input-group>
+
+            <div class="mt-3"></div>
+
+            <button class="btn btn-primary" class="btn btn-outline-danger mr-2" (click)="setEditProfile(false)">ยกเลิก</button>
+            <button type="submit" class="btn btn-primary" [disabled]="vendorProfileForm.disabled" class="btn btn-primary">
+              บันทึกข้อมูล
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
