--- a/frontend-webapp/src/app/shared/file-input/file-input.component.html
+++ b/frontend-webapp/src/app/shared/file-input/file-input.component.html
@@ -1,1 +1,4 @@
-<input type="file" (change)="updateInputFile($event)">
+<button type="button"  class="btn btn-outline-primary">
+{{ (fileList && fileList.length === 1) ? fileList[0].name : 'อัพโหลดรูปภาพ' }}
+</button>
+<input type="file" (change)="updateInputFile($event)" />
