--- a/frontend-webapp/src/app/search/search.component.html
+++ b/frontend-webapp/src/app/search/search.component.html
@@ -1,62 +1,60 @@
-<ng-container *appSubNavBar>
-  <form class="filter-bar" [formGroup]="searchFilterForm">
-    <app-menu text="ช่วงราคา">
-      <div class="my-3 mx-4" formGroupName="price">
-        <div class="row">
-          <div class="col-6">
-            <app-input-group label="ราคาต่ำสุด">
-              <input appInput type="text" class="form-control" formControlName="min" placeholder="ราคาต่ำสุด">
-              <app-input-error *ngIf="searchFilterForm.hasError('pattern', 'price.min')">
-                กรุณาใส่เฉพาะตัวเลข
-              </app-input-error>
-            </app-input-group>
-          </div>
-          <div class="col-6">
-            <app-input-group label="ราคาสูงสุด">
-              <input appInput type="text" class="form-control" formControlName="max" placeholder="ราคาสูงสุด">
-              <app-input-error *ngIf="searchFilterForm.hasError('pattern', 'price.max')">
-                กรุณาใส่เฉพาะตัวเลข
-              </app-input-error>
-            </app-input-group>
-          </div>
+<form *appSubNavBar class="filter-bar" [formGroup]="searchFilterForm">
+  <app-menu text="ช่วงราคา">
+    <div class="my-3 mx-4" formGroupName="price">
+      <div class="row">
+        <div class="col-6">
+          <app-input-group label="ราคาต่ำสุด">
+            <input appInput type="text" class="form-control" formControlName="min" placeholder="ราคาต่ำสุด">
+            <app-input-error *ngIf="searchFilterForm.hasError('pattern', 'price.min')">
+              กรุณาใส่เฉพาะตัวเลข
+            </app-input-error>
+          </app-input-group>
+        </div>
+        <div class="col-6">
+          <app-input-group label="ราคาสูงสุด">
+            <input appInput type="text" class="form-control" formControlName="max" placeholder="ราคาสูงสุด">
+            <app-input-error *ngIf="searchFilterForm.hasError('pattern', 'price.max')">
+              กรุณาใส่เฉพาะตัวเลข
+            </app-input-error>
+          </app-input-group>
         </div>
       </div>
-    </app-menu>
-    <app-menu text="วันจัดตลาด">
-      <div class="my-3 mx-4">
-        <input appDateRangeInput [inlineDatePickerTarget]="datePickerContainer" type="text" class="form-control form-control-lg" formControlName="dateRange" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
-        <div #datePickerContainer></div>
+    </div>
+  </app-menu>
+  <app-menu text="วันจัดตลาด">
+    <div class="my-3 mx-4">
+      <input appDateRangeInput [inlineDatePickerTarget]="datePickerContainer" type="text" class="form-control form-control-lg" formControlName="dateRange" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
+      <div #datePickerContainer></div>
+    </div>
+  </app-menu>
+  <app-menu text="ช่วงเวลาที่ตลาดเปิด">
+    <div class="my-3 mx-4" formGroupName="time">
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" formControlName="morning" class="form-check-input"> เช้า
+        </label>
       </div>
-    </app-menu>
-    <app-menu text="ช่วงเวลาที่ตลาดเปิด">
-      <div class="my-3 mx-4" formGroupName="time">
-        <div class="form-check">
-          <label class="form-check-label">
-            <input type="checkbox" formControlName="morning" class="form-check-input"> เช้า
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input type="checkbox" formControlName="afternoon" class="form-check-input"> บ่าย
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input type="checkbox" formControlName="evening" class="form-check-input"> เย็น
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input type="checkbox" formControlName="night" class="form-check-input"> กลางคืน
-          </label>
-        </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" formControlName="afternoon" class="form-check-input"> บ่าย
+        </label>
       </div>
-    </app-menu>
-    <button *ngIf="canGoBack()" type="button" class="ml-auto btn btn-link" (click)="goBack()">
-      ปิดการค้นหา
-    </button>
-  </form>
-</ng-container>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" formControlName="evening" class="form-check-input"> เย็น
+        </label>
+      </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" formControlName="night" class="form-check-input"> กลางคืน
+        </label>
+      </div>
+    </div>
+  </app-menu>
+  <button *ngIf="canGoBack()" type="button" class="ml-auto btn btn-link" (click)="goBack()">
+    ปิดการค้นหา
+  </button>
+</form>
 
 <div class="container mt-5 mb-5" *ngIf="(searchResult | async) as result">
   <ng-container *ngIf="result.status === 'ok'; else noSearchQuery">
