--- a/frontend-webapp/src/styles/_common.scss
+++ b/frontend-webapp/src/styles/_common.scss
@@ -10,8 +10,8 @@ $dark-gray: #514547;
 $gray: #9D9395;
 $light-gray: #E1DCDD;
 
-$input-btn-focus-color: rgba($dark-gray, 0.25);
-$input-focus-border-color: lighten($dark-gray, 25%);
+$input-btn-focus-color: rgba($other-1, 0.25);
+$input-focus-border-color: $other-1;
 
 $border-radius: .125rem;
 $border-radius-lg: .15rem;
