--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -75,3 +75,18 @@ $cdk-overlay-dark-backdrop-background: rgba(0, 0, 0, 0.3);
   @include font-family(heading);
   @include font-weight(regular);
 }
+
+input {
+  box-shadow: none !important;
+  &:focus {
+    box-shadow: none !important;
+  }
+}
+
+input.-shadow {
+  box-shadow: 0 4px 8px rgba($gray, 0.15) !important;
+  transition: box-shadow 0.15 ease-in-out;
+  &:focus {
+    box-shadow: 0 2px 4px rgba($gray, 0.15) !important;
+  }
+}
