--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -10,7 +10,7 @@
         </div>
         <div *ngIf="isEdit" class="mt-3">
           <div class="mx-auto d-block">
-            <app-file-input></app-file-input>
+            <app-file-input formControlName="profileImage"></app-file-input>
           </div>
         </div>
       </div>
