--- a/frontend-webapp/src/app/vendor-dashboard/vendor-dashboard.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/vendor-dashboard.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container">
-  <div class="mt-5 mb-5">
+  <div class="my-5">
     <router-outlet></router-outlet>
   </div>
 </div>
