--- a/frontend-webapp/src/app/shared/input/input-group.component.html
+++ b/frontend-webapp/src/app/shared/input/input-group.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <label *ngIf="label" [for]="inputId">{{ label }}</label>
+  <label [for]="inputId">{{ label }}</label>
   <ng-content select="[appInput]"></ng-content>
   <ng-content select="app-input-error" *ngIf="showErrors"></ng-content>
 </div>
