--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
@@ -1,12 +1,12 @@
 @import '~styles/common';
 
 .title {
-  margin-bottom: map-get($spacers, 0.5);
+  margin-bottom: map-get($spacers, 1);
   @include font-family(heading);
   @include font-weight(regular);
 }
 
 .profile-img {
-  max-width: 400px;
-  max-height: 300px;
+  max-width: 25rem;
+  max-height: 20rem;
 }
