--- a/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.html
@@ -1,1 +1,10 @@
-<h1>lessor-dashboard is work!!!!</h1>
+<div *appSubNavBar class="lessor-bar d-flex">
+    <a routerLink="manage" routerLinkActive="active" class="lessor-item pt-3 py-2 px-1 mr-4">จัดการตลาด</a>
+    <a routerLink="profile" class="lessor-item pt-3 py-2 px-1 mr-4">ข้อมูลผู้ให้เช่า</a>
+</div>
+  
+<div class="container">
+  <div class="my-5">
+    <router-outlet></router-outlet>
+  </div>
+</div>
