--- a/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
@@ -1,3 +1,20 @@
-<p>
-  lessor-manage-market works!
-</p>
+<div *ngIf="(lessorMarkets$ | async) as markets">
+  <!-- <code><pre>{{ markets.markets | json }}</pre></code> -->
+  <section class="mb-3">
+    <div class="section-title">
+      <h2>ตลาดมาใหม่ไฟแรง</h2>
+      <a class="link-with-icon" routerLink="/">
+        <div class="link-text">ดูทั้งหมด</div>
+        <div class="link-icon">
+          <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
+        </div>
+      </a>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets">
+        <app-market-item [market]="market"></app-market-item>
+      </div>
+    </div>
+  </section>
+</div>
