--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -71,7 +71,10 @@
 
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of (marketFeed | async).recentlyAdded">
-        <app-market-item [market]="market"></app-market-item>
+        <a [routerLink]="['/market', market.id]" class="market">
+          <app-market-item [market]="market"></app-market-item>
+        </a>
+        
       </div>
     </div>
   </section>
@@ -89,7 +92,9 @@
 
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of (marketFeed | async).night">
-        <app-market-item [market]="market"></app-market-item>
+        <a [routerLink]="['/market', market.id]" class="market">
+          <app-market-item [market]="market"></app-market-item>
+        </a>
       </div>
     </div>
   </section>
@@ -107,7 +112,9 @@
 
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of (marketFeed | async).winter">
-        <app-market-item [market]="market"></app-market-item>
+        <a [routerLink]="['/market', market.id]" class="market">
+           <app-market-item [market]="market"></app-market-item>
+        </a>
       </div>
     </div>
   </section>
