--- a/frontend-webapp/src/app/market/landing/market-landing.component.html
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.html
@@ -117,7 +117,9 @@
       <h2 class="pt-2 mb-4">คุณอาจสนใจตลาดเหล่านี้</h2>
       <div class="row">
         <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let similarMarket of (similarMarketsObs | async)">
-          <app-market-item [market]="similarMarket"></app-market-item>
+          <a [routerLink]="['/market', similarMarket.id]" class="market">
+            <app-market-item [market]="similarMarket"></app-market-item>
+          </a>
         </div>
       </div>
     </section>
