--- a/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
@@ -4,16 +4,15 @@
     <div class="section-title">
       <h2>ตลาดมาใหม่ไฟแรง</h2>
       <a class="link-with-icon" routerLink="/">
-        <div class="link-text">ดูทั้งหมด</div>
-        <div class="link-icon">
-          <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
-        </div>
+        สร้างตลาดใหม่
       </a>
     </div>
 
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets">
+        
         <app-market-item [market]="market"></app-market-item>
+                
       </div>
     </div>
   </section>
