--- a/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-manage-market/lessor-manage-market.component.html
@@ -2,18 +2,32 @@
   <!-- <code><pre>{{ markets.markets | json }}</pre></code> -->
   <section class="mb-3">
     <div class="section-title">
-      <h2>ตลาดมาใหม่ไฟแรง</h2>
+      <h2>ตลาดปัจจุบัน</h2>
       <a class="link-with-icon" routerLink="/">
         สร้างตลาดใหม่
       </a>
     </div>
 
     <div class="row">
-      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets">
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.upcoming_markets">
         
         <app-market-item [market]="market"></app-market-item>
                 
       </div>
     </div>
   </section>
+
+  <section class="mb-3">
+      <div class="section-title">
+        <h2>ตลาดที่ผ่านมาแล้ว</h2>
+      </div>
+  
+      <div class="row">
+        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of markets.passed_markets">
+          
+          <app-market-item [market]="market"></app-market-item>
+                  
+        </div>
+      </div>
+    </section>
 </div>
