Fix autofill bug

--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="(vendorProfile$ | async) as vendorProfile">
+<div class="row">
   <div class="col-md-10">
     <h1>ข้อมูลส่วนตัว</h1>
 
