Add vendor product component

--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
@@ -6,7 +6,7 @@
   @include font-weight(regular);
 }
 
-.profile-img {
-  max-width: 25rem;
-  max-height: 20rem;
+.profile-img-wrapper {
+  max-width: 20rem;
+  max-height: 100%;
 }
