--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
 
         <ng-container *ngIf="status.type === 'loggedIn'">
           <li class="nav-item">
-            <a href="#" class="navbar-text">{{ status.user.firstName }}</a>
+            <a class="navbar-text" routerLink="vendor">{{ status.user.firstName }}</a>
           </li>
           <button class="btn btn-link my-2 my-sm-0" (click)="logout()">ออกจากระบบ</button>
         </ng-container>
