--- a/frontend-webapp/src/app/market/landing/market-landing.component.scss
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.scss
@@ -45,19 +45,39 @@ nav {
   border-bottom: 1px solid $light-gray;
   position: sticky;
   top: 0;
+  .inpage-nav-wrapper {
+    white-space: nowrap;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
   .nav-link {
     @include font-family(heading);
     color: $dark-gray;
     display: inline-block;
     padding-top: map-get($spacers, 3);
     padding-bottom: map-get($spacers, 3);
-    margin-left: map-get($spacers, 4);
+    margin-left: map-get($spacers, 3);
+    @include media-breakpoint-up(md) {
+      margin-left: map-get($spacers, 4);
+    }
     &:first-child {
       margin-left: 0;
     }
     &.active {
       color: $primary;
     }
+  }
+  .scroll-fade {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    box-shadow: -20px 1px 20px 0 #fff inset;
   }
 }
 
