--- a/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.scss
@@ -1,3 +1,17 @@
+@import '~styles/common';
+
 .description {
   font-size: 0.9rem;
+}
+
+.product-list>div {
+  background: #F8F8F8;
+  border-radius: $border-radius;
+
+  .thumb-img img {
+    object-fit: cover;
+    object-position: center;
+    min-width: 5em;
+    max-height: 5em;
+  }
 }
