--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-10">
+  <div class="offset-md-1 col-md-10">
     <h1>ข้อมูลส่วนตัว</h1>
 
     <form [formGroup]="vendorProfileForm" (submit)="updateProfile()">
