--- a/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.html
@@ -1,10 +1,8 @@
-<div *appSubNavBar class="vendor-bar d-flex">
-  <a routerLink="manage" class="vendor-item pt-3 py-2 px-1 mr-4" routerLinkActive="active" >จัดการตลาด</a>
-  <a routerLink="profile" class="vendor-item pt-3 py-2 px-1 mr-4" routerLinkActive="active">ข้อมูลผู้ให้เช่า</a>
+<div *appSubNavBar class="lessor-bar d-flex">
+  <a routerLink="manage" class="lessor-item pt-3 py-2 px-1 mr-4" routerLinkActive="active">จัดการตลาด</a>
+  <a routerLink="profile" class="lessor-item pt-3 py-2 px-1 mr-4" routerLinkActive="active">ข้อมูลผู้ให้เช่า</a>
 </div>
 
-<div class="container">
-  <div class="my-5">
-    <router-outlet></router-outlet>
-  </div>
+<div class="container my-5">
+  <router-outlet></router-outlet>
 </div>
