--- a/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.scss
+++ b/frontend-webapp/src/app/lessor-dashboard/lessor-dashboard.component.scss
@@ -1,9 +1,9 @@
 @import '~styles/common';
 
-.vendor-bar {
+.lessor-bar {
   display: flex;
 
-  .vendor-item {
+  .lessor-item {
     @include font-family(heading);
     @include font-weight(regular);
     color: $dark-gray;
