--- a/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.html
@@ -23,8 +23,28 @@
   </div>
 </div>
 
-<code>
-  <pre>
-    {{ products | json }}
-  </pre>
-</code>
+<div *ngIf="isShowAddProduct" class="mt-3">
+  <form [formGroup]="addProductForm" (submit)="addProduct()">
+    <app-input-group label="ชื่อสินค้า">
+      <input appInput type="text" class="form-control" formControlName="name" placeholder="ชื่อสินค้า">
+      <app-input-error *ngIf="addProductForm.controls['name'].hasError('required')">
+        กรุณากรอกชื่อสินค้า
+      </app-input-error>
+    </app-input-group>
+    <app-input-group label="รายละเอียดสินค้า">
+      <input appInput type="text" class="form-control" formControlName="name" placeholder="รายละเอียดสินค้า">
+      <app-input-error *ngIf="addProductForm.controls['name'].hasError('required')">
+        กรุณากรอกรายละเอียดสินค้า
+      </app-input-error>
+    </app-input-group>
+    <app-input-group label="รูปภาพสินค้า">
+      <app-file-input appInput class="mx-auto d-block" formControlName="image" label="เลือกรูปภาพ"></app-file-input>
+      <app-input-error *ngIf="addProductForm.controls['image'].hasError('required')">
+        กรุณาเลือกรูปภาพ
+      </app-input-error>
+    </app-input-group>
+    <button class="btn btn-primary mt-2" type="submit">เพิ่มสินค้า</button>
+  </form>
+</div>
+
+<button *ngIf="!isShowAddProduct" class="btn btn-primary mt-3" (click)="showAddProduct()">เพิ่มสินค้า</button>
