--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -3,11 +3,19 @@
   background: $white;
   z-index: $zindex-fixed;
   border-bottom: 1px solid $light-gray;
+  display: flex;
+  justify-content: center;
 }
 
 .navbar {
   display: flex;
   flex-direction: column;
+  &.menu-opened {
+    position: fixed;
+    @include media-breakpoint-up(md) {
+      position: initial;
+    }
+  }
   >.main-nav {
     width: 100%;
     display: flex;
@@ -57,6 +65,7 @@
         width: 100%;
         padding: 15px;
         align-items: flex-start;
+        max-width: 540px;
         @include media-breakpoint-up(md) {
           flex-direction: initial;
           justify-content: initial;
@@ -64,6 +73,7 @@
           padding: initial;
           height: 100%;
           align-items: center;
+          max-width: initial;
         }
         li {
           list-style: none;
@@ -108,12 +118,14 @@
     }
     >app-nav-bar-search-box {
       margin-right: 1rem;
+      z-index: 9999;
     }
     >.hamburger {
       margin-left: auto;
       border: none;
       cursor: pointer;
       z-index: 9999;
+      background: none;
       &:focus {
         outline: 0;
       }
