Remove capability to disable date range input

--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -45,7 +45,7 @@
 @import '~flatpickr/dist/flatpickr.min.css';
 @import '~flatpickr/dist/themes/airbnb.css';
 
-input.date-range[readonly] {
+input.datetime[readonly] {
   background: $white;
 }
 
