Complete delete product

--- a/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/product/vendor-product.component.html
@@ -17,7 +17,7 @@
         </dl>
       </div>
       <div class="ml-auto p-2">
-        <button class="btn btn-danger">ลบ</button>
+        <button class="btn btn-danger" (click)="deleteProduct(product)">ลบ</button>
       </div>
     </div>
   </div>
