--- a/frontend-webapp/src/app/lessor-dashboard/manage-market/lessor-manage-market.component.html
+++ b/frontend-webapp/src/app/lessor-dashboard/manage-market/lessor-manage-market.component.html
@@ -2,9 +2,7 @@
   <section class="mb-3">
     <div class="section-title">
       <h2>ตลาดปัจจุบัน</h2>
-      <a class="link-with-icon" routerLink="/">
-        สร้างตลาดใหม่
-      </a>
+      <a class="link-with-icon" routerLink="../create-market">สร้างตลาดใหม่</a>
     </div>
 
     <div class="row">
